Bug 157424 - Modern IDB (Workers): Start running a lot of the workers tests
Summary: Modern IDB (Workers): Start running a lot of the workers tests
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords:
Depends on:
Blocks: 149953
  Show dependency treegraph
 
Reported: 2016-05-06 12:49 PDT by Brady Eidson
Modified: 2016-05-06 14:04 PDT (History)
5 users (show)

See Also:


Attachments
Patch (54.07 KB, patch)
2016-05-06 13:00 PDT, Brady Eidson
sam: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2016-05-06 12:49:50 PDT
Modern IDB (Workers): Start running a lot of the workers tests

There's still plenty of skipped and/or failing tests that show real problems, so the master Workers bug (149953) is not yet done...

But we're definitely ready to actually start running basic-to-intermediate tests.
Comment 1 Brady Eidson 2016-05-06 13:00:36 PDT
Created attachment 278260 [details]
Patch
Comment 2 WebKit Commit Bot 2016-05-06 13:01:13 PDT
Attachment 278260 [details] did not pass style-queue:


ERROR: Source/WebCore/Modules/indexeddb/client/TransactionOperation.h:72:  Extra space before ( in function call  [whitespace/parens] [4]
Total errors found: 1 in 43 files


If any of these errors are false positives, please file a bug against check-webkit-style.
Comment 3 Sam Weinig 2016-05-06 13:12:56 PDT
Comment on attachment 278260 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=278260&action=review

> Source/WebCore/Modules/indexeddb/WorkerGlobalScopeIndexedDatabase.cpp:76
> +    if (!RuntimeEnabledFeatures::sharedFeatures().indexedDBWorkersEnabled())
> +        return nullptr;

This seems like it should be in the bindings.
Comment 4 Brady Eidson 2016-05-06 13:20:49 PDT
(In reply to comment #3)
> Comment on attachment 278260 [details]
> Patch
> 
> View in context:
> https://bugs.webkit.org/attachment.cgi?id=278260&action=review
> 
> > Source/WebCore/Modules/indexeddb/WorkerGlobalScopeIndexedDatabase.cpp:76
> > +    if (!RuntimeEnabledFeatures::sharedFeatures().indexedDBWorkersEnabled())
> > +        return nullptr;
> 
> This seems like it should be in the bindings.

It already was, so nm!
Comment 5 Brady Eidson 2016-05-06 14:04:22 PDT
http://trac.webkit.org/changeset/200521